Fix JDK 21 compatibility